logs/resolv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/resolv'...
Listing './lib/python3.5/site-packages/resolv/resolvers'...
Compiling './lib/python3.5/site-packages/resolv/resolvers/filebox.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/filebox.py", line 22
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/filenuke.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/filenuke.py", line 24
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/mediafire.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/mediafire.py", line 25
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/pastebin.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/pastebin.py", line 22
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/putlocker.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/putlocker.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/sockshare.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/sockshare.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/vidbux.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/vidbux.py", line 24
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/vidxden.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/vidxden.py", line 24
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resolv/resolvers/youtube.py'...
***   File "./lib/python3.5/site-packages/resolv/resolvers/youtube.py", line 20
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/resolv-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
